# multipush

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  policy-check.yml
crates/multipush-cli/: Cargo.toml
crates/multipush-cli/src/: main.rs  registry.rs
crates/multipush-core/: Cargo.toml
crates/multipush-core/src/: error.rs  lib.rs  model.rs  testing.rs
crates/multipush-core/src/config/: defaults.rs  loader.rs  mod.rs  policy.rs  provider.rs  rules.rs
crates/multipush-core/src/engine/: evaluator.rs  executor.rs  mod.rs  targeting.rs
crates/multipush-core/src/formatter/: mod.rs
crates/multipush-core/src/provider/: mod.rs
crates/multipush-core/src/recipe/: builtin.rs  mod.rs
crates/multipush-core/src/recipe/builtins/: codeowners.yml  dependabot.yml  editorconfig.yml  gitignore.yml  license.yml  security-md.yml
crates/multipush-core/src/rule/: mod.rs
crates/multipush-formatters/: Cargo.toml
crates/multipush-formatters/src/: lib.rs  markdown.rs  table.rs
crates/multipush-provider-github/: Cargo.toml
crates/multipush-provider-github/src/: lib.rs
crates/multipush-rules/: Cargo.toml
crates/multipush-rules/src/: branch_protection.rs  ensure_file.rs  ensure_json_key.rs  ensure_yaml_key.rs  file_matches.rs  key_path.rs  lib.rs  repo_settings.rs
crates/multipush-tests/: Cargo.toml
crates/multipush-tests/fixtures/: invalid_empty_policies.yml  invalid_unknown_field.yml  recipe_codeowners.yml  valid_basic.yml
crates/multipush-tests/fixtures/multi_file/: policies.yml  provider.yml
crates/multipush-tests/tests/: apply_mode.rs  branch_protection.rs  check_mode.rs  config_tests.rs  repo_settings.rs  targeting.rs
examples/: basic.yml  branch-protection.yml  recipes.yml  repo-settings.yml
examples/multi-file/: multipush.yml
examples/multi-file/policies/: compliance.yml  nodejs.yml  security.yml
