[package]
name = "multipush-rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
multipush-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
multipush-core = { workspace = true, features = ["test-helpers"] }
